# CharacterSheetGenerator

./: .tool-versions  DnD_5E_CharacterSheet_FormFillable.pdf:Zone.Identifier  README.md  app.py  examplePDFdata.json  forms.py  jest.config.js  models.py  package-lock.json  package.json  pdfGen.py  pdfKeys.py  pdfplay.py  pyproject.toml  requirements.txt  seed.py  tests_app.py  tests_flask.py  tests_models.py  tests_pdfGen.py
static/: app.js  character_ui.test.js  create_character.js  create_character_ui.js  get_pdf.js  styles.css  utility.js  utility.test.js
templates/: base.html  characters.html  home-anon.html  home.html  new_character.html  signup.html
